--- a/infoGlobal.html
+++ b/infoGlobal.html
@@ -1,47 +1,354 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-    crossorigin="anonymous">
-   <link href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-   <link href="https://unpkg.com/tippy.js@1.1.3/dist/tippy.css">
-    <link rel="stylesheet" href="/scss/style.css">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous">
 
-    <div class="header">
-        <div class="map-container">
-          <img src="http://res.cloudinary.com/slzr/image/upload/v1500321012/world-map-1500_vvekl5.png">
-          <a href="https://en.wikipedia.org/wiki/Venezuela"><div class="point venezuela tippy" title="Venezuela"></div></a>
-          <div class="point brasil tippy" title="Brasil"></div>
-          <div class="point argentina tippy" title="Argentina"></div>
-          <div class="point colombia tippy" title="Colombia"></div>
-          <div class="point panama tippy" title="Panamá"></div>
-          <div class="point mexico tippy" title="Mexico"></div>
-          <div class="point usa tippy" title="Estados Unidos"></div>
-          <div class="point arabia tippy" title="Arabia Saudi"></div>
-          <div class="point turquia tippy" title="Turquía"></div>     
-          <div class="point rusia tippy" title="Rusia"></div>
-          <div class="point china tippy" title="China"></div>
-          <div class="point japon tippy" title="Japon"></div>
-          <div class="point australia tippy" title="Australia"></div>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+
+        <link
+            href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="https://unpkg.com/tippy.js@1.1.3/dist/tippy.css">
+        <link rel="stylesheet" href="/scss/style.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
+        <title>Document</title>
+    </head>
+    <body>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                role="button"
+                                data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="#">Action</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                </li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input
+                            class="form-control me-2"
+                            type="search"
+                            placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <div class="header">
+            <div class="map-container">
+                <img
+                    src="http://res.cloudinary.com/slzr/image/upload/v1500321012/world-map-1500_vvekl5.png">
+                <a href="https://en.wikipedia.org/wiki/Venezuela">
+                    <div class="point venezuela tippy" title="Venezuela"></div>
+                </a>
+                <div class="point brasil tippy" title="Brasil"></div>
+                <div class="point argentina tippy" title="Argentina"></div>
+                <div class="point colombia tippy" title="Colombia"></div>
+                <div class="point panama tippy" title="Panamá"></div>
+                <div class="point mexico tippy" title="Mexico"></div>
+                <div class="point usa tippy" title="Estados Unidos"></div>
+                <div class="point arabia tippy" title="Arabia Saudi"></div>
+                <div class="point turquia tippy" title="Turquía"></div>
+                <div class="point rusia tippy" title="Rusia"></div>
+                <div class="point china tippy" title="China"></div>
+                <div class="point japon tippy" title="Japon"></div>
+                <div class="point australia tippy" title="Australia"></div>
+            </div>
         </div>
-      </div>
 
+        <div class="ribbon-wrapper ribbon-xl opacity-75 ">
+            <div class="ribbon bg-warning text-lg">
+                Hello World
+            </div>
+        </div>
 
-    
+        <!-- Content Wrapper. Contains graph -->
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <table
+                        id="animations-example-6"
+                        class="charts-css column show-labels hide-data data-spacing-5 show-primary-axis">
+                        <caption>
+                            Animation Example #6
+                        </caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    Year
+                                </th>
+                                <th scope="col">
+                                    Progress
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">
+                                    2016
+                                </th>
+                                <td style="--size:0.2;">
+                                    <span class="data">
+                                        20
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2017
+                                </th>
+                                <td style="--size:0.4;">
+                                    <span class="data">
+                                        40
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2018
+                                </th>
+                                <td style="--size:1;">
+                                    <span class="data">
+                                        100
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2019
+                                </th>
+                                <td style="--size:0.5;">
+                                    <span class="data">
+                                        50
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2020
+                                </th>
+                                <td style="--size:0.3;">
+                                    <span class="data">
+                                        30
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col">
+                    <table
+                        id="animations-example-4"
+                        class="charts-css column show-labels hide-data data-spacing-5 show-primary-axis">
+                        <caption>
+                            Animation Example #4
+                        </caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    Year
+                                </th>
+                                <th scope="col">
+                                    Progress
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">
+                                    2016
+                                </th>
+                                <td style="--size:0.2;">
+                                    <span class="data">
+                                        20
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2017
+                                </th>
+                                <td style="--size:0.4;">
+                                    <span class="data">
+                                        40
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2018
+                                </th>
+                                <td style="--size:0.6;">
+                                    <span class="data">
+                                        60
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2019
+                                </th>
+                                <td style="--size:0.8;">
+                                    <span class="data">
+                                        80
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    2020
+                                </th>
+                                <td style="--size:1;">
+                                    <span class="data">
+                                        100
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </main>
+
+            </div>
+            <div class="col">
+                <table
+                    id="animations-example-1"
+                    class="charts-css column hide-data show-labels show-primary-axis data-spacing-6">
+                    <caption>
+                        Animation Example #1
+                    </caption>
+                    <thead>
+                        <tr>
+                            <th scope="col">
+                                Year
+                            </th>
+                            <th scope="col">
+                                Progress
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">
+                                2016
+                            </th>
+                            <td style="--size:0.2;">
+                                <span class="data">
+                                    20
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                2017
+                            </th>
+                            <td style="--size:0.4;">
+                                <span class="data">
+                                    40
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                2018
+                            </th>
+                            <td style="--size:0.6;">
+                                <span class="data">
+                                    60
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                2019
+                            </th>
+                            <td style="--size:0.8;">
+                                <span class="data">
+                                    80
+                                </span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                2020
+                            </th>
+                            <td style="--size:1;">
+                                <span class="data">
+                                    100
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
+    <script
+        src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
 
 </body>
 </html>
