--- a/infoGlobal.html
+++ b/infoGlobal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fn">
 
 <head>
     <meta charset="UTF-8">
@@ -7,14 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
-
     <link href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://unpkg.com/tippy.js@1.1.3/dist/tippy.css">
     <link rel="stylesheet" href="scss/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css">
     <title>Mégalopoles</title>
 </head>
@@ -25,30 +20,30 @@
 
 
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="index.html"><span class="animated-text ml-3">
-                Les MéGaloPoles</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="infoVille1.html" style="color: whitesmoke;">Tokyo</a>
-                    <span><img src="imgEcf/japon.png" alt="" style="width: 30px;"></span>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="infoVille2.html" style="color: whitesmoke;">New York</a>
-                    <span><img src="imgEcf/etats-unis.png" alt="loogUsa" style="width: 30px;"></span>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="infoVille3.html" style="color: whitesmoke;">Londres</a>
-                    <span><img src="imgEcf/royaume-uni.png" alt="logoLondon" style="width: 30px;"></span>
-
-                </li>
-            </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><span class="animated-text ml-3">
+                    Les MéGaloPoles</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="infoVille1.html" style="color: whitesmoke;">Tokyo</a>
+                        <span><img src="imgEcf/japon.png" alt="" style="width: 30px;"></span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="infoVille2.html" style="color: whitesmoke;">New York</a>
+                        <span><img src="imgEcf/etats-unis.png" alt="loogUsa" style="width: 30px;"></span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="infoVille3.html" style="color: whitesmoke;">Londres</a>
+                        <span><img src="imgEcf/royaume-uni.png" alt="logoLondon" style="width: 30px;"></span>
+                    </li>
+                </ul>
+            </div>
         </div>
-
     </nav>
 
 
@@ -209,16 +204,18 @@
     <a href="#top" id="back-to-top-btn"><img src="imgEcf/avion.png" alt="logoAvion"></a>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    <!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/js/adminlte.min.js"></script>
-
 </body>
 
 </html>
