--- a/infoVille2.html
+++ b/infoVille2.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
           </button>
           <div>
-            <a class="navbar-brand" href="">Les Mégalopoles</a>
+            <a class="navbar-brand" href="infoGlobal.html">Les Mégalopoles</a>
           </div>
           <div>
             <a href="infoVille1.html"><img src="imgEcf/japon.png" alt="logojapon" style="width: 30px;"></a>
@@ -51,6 +51,9 @@
             <ul class="nav navbar-nav">
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section
+                </a>
+                <a href="infoGlobal.html">
+                  <p>Acceuil</p>
                 </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                   <li role="presentation"><a role="menuitem" href="#section2">Section 1</a></li>
@@ -67,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div id="section2" class="col-md-12 col-lg-6">
-          <h1>Histoire de la ville</h1>
+          <h2>Histoire de la ville</h2>
           <p>New York est une ville légendaire. Fondée en 1624 par les colons néerlandais, elle est devenue l'un des
             centres économiques et culturels les plus importants du monde. </p>
           <p>Elle a connu son lot de bouleversements, notamment avec la construction de la statue de la Liberté en 1886,
@@ -79,7 +82,7 @@
 
         </div>
         <div id="section3" class="col-md-12 col-lg-6">
-          <h1>The Big Appele</h1>
+          <h2>The Big Appele</h2>
           <p>La ville de New York est souvent surnommée "la Big Apple" ("la grosse pomme" en français) depuis les années
             1920. L'origine de ce surnom est incertaine, mais il existe plusieurs théories à ce sujet. L'une des
             théories les plus populaires est que le surnom a été popularisé dans les années 1920 par John J. Fitz</p>
@@ -88,8 +91,8 @@
             plus importante de la scène musicale de jazz.
           </p>
         </div>
-        <div id="section4" class="col-md-12 mb-5">
-          <h1>Développement continu</h1>
+        <div id="section4" class="col-md-12 col-lg-6">
+          <h>Développement continu</h>
           <p>New York est une ville en constante évolution, avec un développement continu qui a lieu dans tous les
             domaines:</p>
           <p>Développement immobilier : New York est en constante expansion avec de nombreux projets de développement
