--- a/infoVille1.html
+++ b/infoVille1.html
@@ -56,6 +56,9 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section
                                 </a>
+                                <a href="infoGlobal.html">
+                                    <p>Acceuil</p>
+                                </a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                                     <li role="presentation"><a role="menuitem" href="#section2">Section 1</a></li>
                                     <li role="presentation"><a role="menuitem" href="#section3">Section 2</a></li>
