--- a/infoVille3.html
+++ b/infoVille3.html
@@ -52,6 +52,9 @@
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Section
                 </a>
+                <a href="infoGlobal.html">
+                  <p>Acceuil</p>
+                </a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                   <li role="presentation"><a role="menuitem" href="#section2">Section 1</a></li>
                   <li role="presentation"><a role="menuitem" href="#section3">Section 2</a></li>
@@ -116,7 +119,7 @@
 
 
     <div class="container" style="margin-top: 70px;">
-      <h1>Restaurant New York</h1>
+      <h1>Restaurants Londres</h1>
       <div class="row">
         <div class="col-md-4">
           <img
