--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
           </path>
         </svg><input type="password" class="pass-input" placeholder="password" /></div>
     </div>
-    <button class="signin-button">Login</button>
+    <a href="index.html"> <button class="signin-button">Login</button></a>
     <div class="link">
       <a href="#">Forgot password?</a> or <a href="#">Sign up</a>
     </div>
